<resources>
    <string name="app_name">NYTSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="articleSearch">News article search</string>
    <string name="articleDetail">Article detail</string>
    <string name="beginDate">Begin Date</string>
    <string name="sort">Sort by</string>
    <string name="checkBox">News desk values</string>
    <string name="arts">Arts</string>
    <string name="fashion">Fashion</string>
    <string name="style">Style</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="planets_prompt">prompt</string>
    <string name="hint2">Click to pick up a date</string>
</resources>
